// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundPosition renders 0 1`] = `
Array [
  .c0 {
  background-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders function 1`] = `
Array [
  .c0 {
  background-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders invalid theme path 1`] = `
Array [
  .c0 {
  background-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders negative number 1`] = `
Array [
  .c0 {
  background-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    background-position: July;
  }
}

@media April {
  .c0 {
    background-position: August;
  }
}

@media January {
  .c0 {
    background-position: September;
  }
}

@media April {
  .c0 {
    background-position: November;
  }
}

@media June {
  .c0 {
    background-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-position: July;
  }
}

@media April {
  .c0 {
    background-position: August;
  }
}

@media January {
  .c0 {
    background-position: September;
  }
}

@media April {
  .c0 {
    background-position: November;
  }
}

@media June {
  .c0 {
    background-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-position: January;
  }
}

@media April {
  .c0 {
    background-position: December;
  }
}

@media January {
  .c0 {
    background-position: April;
  }
}

@media April {
  .c0 {
    background-position: May;
  }
}

@media June {
  .c0 {
    background-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-position: January;
  }
}

@media April {
  .c0 {
    background-position: December;
  }
}

@media January {
  .c0 {
    background-position: April;
  }
}

@media April {
  .c0 {
    background-position: May;
  }
}

@media June {
  .c0 {
    background-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders postitive number 1`] = `
Array [
  .c0 {
  background-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders string 1`] = `
Array [
  .c0 {
  background-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundPosition renders valid theme path 1`] = `
Array [
  .c0 {
  background-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
